fixed chrome scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer base{
   h1{
     @apply text-4xl;
